# bot-hoven-ros-pi4

./: Setting-Up-Pi4  Setting-Up-Pi5  publisher.py  subscriber.py
Scripts/: Setting-Up-Pi4.mkd  gpio_node.py  i2c_node.py  launch_file.py  mcp_solenoid.py  pca_servo.py  servo_i2c_test.py  servo_multi_test.py  servo_node.py  servo_test1.py  solenode.py  solenoid_multi_test.py  spi_node.py  stepper_lpgio.py  stepper_rpi-gpio.py  stepper_test1.py  stepper_test2.py
Scripts/ESP32/: esp32_servo_i2c.cpp
Scripts/i2c_test/: CMakeLists.txt  I2CPeripheral.cpp  RobotController.cpp  build_and_run.sh  i2c_pca_mcp_test.cpp  main.cpp  mcp23017_comm.cpp  pca9685_comm.cpp
Scripts/i2c_test/include/: I2CPeripheral.h  RobotController.h  mcp23017_comm.h  mcp23017_constants.h  pca9685_comm.h  pca9685_constants.h
